# slidge-whatsapp

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  build.py  doap.xml  docker-compose.yml  go.mod  go.sum  pyproject.toml  watcher.py
.builds/: ci.yml  container.yml  wheels.yml
.gitlab/: .gitlab-ci.build.yml  .gitlab-ci.template.yml  docker-credential-init.sh  gen_gpg_key.sh  git-sync.sh
docs/source/: conf.py  config.rst  index.rst  user.rst
slidge_whatsapp/: __init__.py  __main__.py  attachment.go  command.py  config.py  contact.py  event.go  gateway.go  gateway.py  go.mod  go.sum  group.py  media.go  media.py  session.go  session.py  util.py
slidge_whatsapp/media/: ffmpeg.go  media.go  mupdf.go  stub.go
tests/: test_whatsapp.py
upstream_repo/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  doap.xml  docker-compose.yml  watcher.py
upstream_repo/.builds/: ci.yml
upstream_repo/docs/source/: config.rst  features.rst
upstream_repo/slidge_whatsapp/: __main__.py  event.go  session.go
upstream_repo/tests/: conftest.py  test_base.py  test_whatsapp.py
